--- a/faoverview.html
+++ b/faoverview.html
@@ -99,7 +99,7 @@
               <h1 className="text-2xl font-bold">FA Personnel Overview</h1>
               <button
                 className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
-                onClick={() => (window.location.href = "index2.html")}
+                onClick={() => (window.location.href = "index.html")}
               >
                 Back
               </button>
