--- a/index.html
+++ b/index.html
@@ -804,6 +804,16 @@
               </button>
             </div>
 
+                    <div className="flex justify-between items-center mb-4">
+              <h1 className="text-2xl font-bold">Phân Line</h1>
+              <button
+                className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
+                onClick={() => (window.location.href = "nhansuFA.html")}
+              >
+                Phân Line
+              </button>
+            </div>
+
             {/* Chọn ngày chung và nút reset */}
             <div className="mb-4 flex items-center gap-4">
               <div>
@@ -1262,3 +1272,4 @@
     </script>
   </body>
 </html>
+
