--- a/index.html
+++ b/index.html
@@ -796,12 +796,11 @@
           <div className="container mx-auto p-4">
             <div className="flex justify-between items-center mb-4">
               <h1 className="text-2xl font-bold">FA Personnel Management</h1>
-              <button
-                className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
-                onClick={() => (window.location.href = "faoverview.html")}
-              >
-                FA Personnel Overview
-              </button>
+              <a href="faoverview.html" target="_blank" rel="noopener noreferrer">
+  <button className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+    FA Personnel Overview
+  </button>
+</a>
             </div>
 
             <div className="flex justify-between items-center mb-4">
@@ -1272,5 +1271,6 @@
     </script>
   </body>
 </html>
+
 
 
