--- a/index.html
+++ b/index.html
@@ -805,12 +805,11 @@
 
             <div className="flex justify-between items-center mb-4">
               <h1 className="text-2xl font-bold">Phân Line</h1>
-              <button
-                className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
-                onClick={() => (window.location.href = "nhansuFA.html")}
-              >
-                Phân Line
-              </button>
+              <a href="nhansuFA.html" target="_blank" rel="noopener noreferrer">
+                <button className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+                  Phân Line
+                </button>
+              </a>
             </div>
 
             {/* Chọn ngày chung và nút reset */}
@@ -1271,6 +1270,7 @@
     </script>
   </body>
 </html>
+
 
 
 
